# bottle-base

./: .gitignore  README.md  config.py  main.py  pyproject.toml
app/: __init__.py
app/controllers/: api.py  html.py  static.py
app/views/: index.tpl
static/css/: style.css
